# audio

./: .gitignore  README.md
openal/: CMakeLists.txt  build-android.sh
openal/include/: lib.h
openal/src/: audio_decoder.cc  audio_decoder.h  audio_mgr.cc  audio_mgr.h  audio_res.cc  audio_res.h  buffer.h  lib.cc
openal/test/: test.cc
template/: CMakeLists.txt  build.sh
template/src/: lib.cc
template/test/: test.cc
